--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+tilte: Welcome to the zethembenxele's home page!!
+description: feel free to bookmark this to keep an eye on my project updates
